# pointer-searcher

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  compile.sh
data/: input.txt
include/: base_include.h
scripts/: compile.sh
src/: main.c
